[package]
name = "simple_rs_os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# The profile that is used for 'cargo build'
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# The profile that is used for 'cargo build --release'
[profile.release]
pannic = "abort" # disable stack unwinding on panic

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"